Manifests/go-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gofiber-service
spec:
  selector:
    app: gofiber
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
